Update of selection algorithms